商品出品コントローラーテスト

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,4 +1,12 @@
 ja:
+  activerecord:
+    models:
+      user: ユーザー
+      image: 画像
+    attributes:
+      product:
+        id:
+        images: 画像
   enums:
    product:
      status:
